--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -1,6 +1,14 @@
 @charset "utf-8";
 /* CSS Document */
 
+footer {
+  margin:20px 0 0;
+  padding:20px 20px;
+  background:#EFEFEF;
+  text-align:right;
+  width:100%
+}
+
 .login_register {
   background-image: url("../../img/fornt/background_img.jpg");
   background-size: cover;
@@ -108,18 +116,22 @@ img.register_logo {
   position: absolute;
   top: 79px;
 }
-.col_top .col-lg-1 {
+#main-sidebar {
+	height: 100%;
+	position: fixed;
+	padding:0;
+}
+#menu {
   background-color: #24a1da;
   height: 100%;
-  position: fixed;
   text-align: center;
   padding:0;
 }
-.container_1 > .col-lg-2 {
+#sidebar {
   background-color: #3f6280;
   height: 100%;
   padding: 0;
-  position: fixed;
+	position:absolute;
 }
 .logo img {
   width: 100%;
@@ -127,37 +139,37 @@ img.register_logo {
 h1.logo {
   margin: 0 0 20px;
 }
-.col_top .col-lg-1 > div {
+#menu > div {
   padding: 20px;
 }
-.col_top .col-lg-2 ul {
+#sidebar ul {
   margin: 35px auto;
   overflow: hidden;
   padding: 0;
   text-align: center;
   width: 75%;
 }
-.col_top .col-lg-2 h3 {
+#sidebar h3 {
   text-align: center;
 }
-.col_top .col-lg-2 li {
+#sidebar li {
   border-bottom: 1px solid #fff;
   float: left;
   list-style: outside none none;
   width: 50%;
 }
-.col_top .col-lg-2 h3 {
+#sidebar h3 {
   color: #fff;
   font-size:18px;
   text-align: center;
 }
-.col_top .col-lg-2 li:first-child {
+#sidebar li:first-child {
   border-right: 1px solid #fff;
 }
-.col_top .col-lg-2 li span {
+#sidebar li span {
   display: block;
 }
-.col_top .col-lg-2 li p {
+#sidebar li p {
 	color:#fff;
 }
 
@@ -590,6 +602,7 @@ p.h2 > img {
   padding: 0;
   position: relative;
   text-align: center;
+  width:100%
 }
 .days_preparing p.h2 a {
   float: none;
@@ -611,10 +624,7 @@ p.h2 > img {
 .col-dash li .days_preparing h4  a{ float:none; color:#2cbdce}
 .col-my-content li {
   list-style: outside none none;
-  border-right:1px solid #b2b2b2;
-   border-bottom: 1px solid #b2b2b2;
-  border-top: 1px solid #b2b2b2;
-  padding-bottom:10px;
+  padding-bottom:30px;
 }
 .days_preparing.profile span > img {
   border-radius: 50%;
@@ -660,7 +670,7 @@ p.h2 > img {
 .side_content {
   float: left;
   padding: 0 8px;
-  width: calc(100% - 76px);
+  width: 100%;
 }
 .col-lg-3.side_dashboard_content {
   background-color: #efefef;
@@ -1353,13 +1363,24 @@ body .datepicker.dropdown-menu {
 }
 }
 @media (max-width:767px){
-  .col_top .col-lg-1 {
-  height: auto;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
+  #main-sidebar {
+    height: auto;
+    left: 0;
+    position: relative;
+    top: 0;
+    width: 100%;
+  }
+  #menu {
+    height: auto;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index:10;
+  }
+  #menu div {
+    padding:15px;
+  }
 select#select_lang {
   background-color: #fff;
   border: 1px solid #e8e8e8;
@@ -1394,16 +1415,16 @@ select#select_lang {
   max-width: none;
   width: 100%;
 }
-.col_top .col-lg-1 > div {
+#menu > div {
   display: inline-block;
 }
-.container_1 .col-lg-2 {
+#sidebar {
   position: relative;
 }
 h1.logo {
   margin: 0 0 20px;
 }
-.container_1 .col-lg-2 {
+  #sidebar {
   padding-bottom: 20px;
 }
 .col-about {
@@ -1441,8 +1462,8 @@ h1.logo {
   padding: 8px;
   width: 100%;
 }
-.container_1 .col-lg-2 {
-  margin-top: 50px;
+  #sidebar {
+  margin-top: 70px;
   padding-bottom: 20px;
 }
 }
