--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -2,11 +2,16 @@
 /* CSS Document */
 
 footer {
-  margin:20px 0 0;
+  margin:0;
   padding:20px 20px;
-  background:#EFEFEF;
+  background:#263B4D;
   text-align:right;
-  width:100%
+  width:100%;
+  color:#fff;
+}
+footer a {
+  color:#fff;
+  font-weight:bold;
 }
 
 .login_register {
@@ -1287,13 +1292,17 @@ img {
   display: block;
   padding: 20px 10px;
 }
+.col-dashboard {
+  float:left;
+}
 .col-lg-3.side_dashboard_content.col-right_tab {
-  display: inline-table;
+  display: block;
   height: 100%;
   margin-top: 0;
   position: absolute;
   right: 0;
   top: 0;
+  bottom:0;
 }
 .days_preparing p.h2 > a span {
   left: 0;
@@ -1460,7 +1469,7 @@ img {
     z-index:10;
   }
   #menu div {
-    padding:15px;
+    padding:0px;
   }
   select#select_lang {
     background-color: #fff;
