--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -1367,14 +1367,17 @@ img {
   width: 100%;
 }
 .chat_content {
-  background-image: url("../../img/background_image.png");
-  background-repeat: no-repeat;
-  background-size: 100% auto;
   display: inline-block;
   min-height: 150px;
   text-align: right;
   width: 100%;
   	position:relative;
+
+}
+#sidebar .chat_tab {
+  background:#dee1e6;
+  padding: 10px 10px 10px;
+  background-size: 100% auto;
 
 }
 #sidebar .chat_tab li {
@@ -1384,12 +1387,8 @@ img {
   width: 50%;
 }
 .chat_box {
-  background-image: url("../../img/background_image.png");
-  background-repeat: repeat-y;
-  background-size: 100% auto;
   display: inline-block;
   width: 100%;
-   height: 220px;
     overflow: auto;
 }
 	.chat_box h6 {
@@ -1397,17 +1396,23 @@ img {
   color: #fff;
   margin: 0;
   padding: 8px 0;
-  text-align: right;
+  text-align: center;
+      font-size:16px;
+      font-weight:bold;
 }
 #sidebar .chat_tab > ul {
   margin: 0;
   width: 100%;
 }
 .chat_tab a {
-  background-color: #f0f4f7;
-  color: #40647a !important;
+  font-size:16px;
+  padding: 10px 5px 10px;
   display: inline-block;
+  background:#fff;
+  border-radius:4px;
+  border-bottom:1px #C5C6C6 solid;
   width: 100%;
+  color:black!important;
 }
 
 @media (max-width:1620px){
