--- a/web/css/front/simplePagination.css
+++ b/web/css/front/simplePagination.css
@@ -18,7 +18,8 @@ ul.simple-pagination {
 .simple-pagination ul {
 	list-style: none;
 	padding: 0;
-	margin: 0;
+	margin: 10px auto 0;
+	display:inline-block;
 }
 
 .simple-pagination li {
