--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -1490,7 +1490,15 @@ img {
   margin: 0 2px;
   width: auto;
 }
+#bots_content td,#channels_content td {
+  vertical-align: top;
 
+}
+#bots_content td i,#channels_content td i {
+  font-size:20px;
+  margin:5px 0 0 10px;
+
+}
 
 @media (max-width:1620px){
   .col_top .col-lg-2 h3 {
