--- a/web/css/front/style.css
+++ b/web/css/front/style.css
@@ -1557,6 +1557,11 @@ body .emoji-wysiwyg-editor.textarea-control {
   min-height: 7em;
   resize: vertical;
 }
+
+body .emoji-picker-container.text-area .emoji-wysiwyg-editor {
+  min-height: 7em;
+  resize: vertical;
+}
 @media (max-width:1620px){
   .col_top .col-lg-2 h3 {
     font-size: 16px;
